--- a/12. EIRGP.md
+++ b/12. EIRGP.md
@@ -1,1 +1,42 @@
-# EIRGP
+# EIGRP
+- EIGRP là giao thức định tuyến kiểu distance vector dạng classless
+## 1. Tổng quan
+- EIGRP bao gồm một số tính năng không nằm trong giao thức định tuyến kiểu vector khoảng cách
+    - Giao thức truyền tin cậy (RTP)
+    - Cập nhật có giới hạn
+    - Thuật toán cập nhật khuếch tán (DUAL)
+    - Khả năng thiết lập lân cận
+    - Có bảng hàng xóm và bảng mô hình 
+## 2. Đặc trưng
+### 2.1 PDMs
+- EIGRP có khả năng định tuyến với nhiều giao thức khác nhau, gồm cả IPv4 và IPv6
+- Đảm bảo bảng Router liền kề và bảng topo của router EIGRP chạy bộ giao thức này 
+- Xây dựng và phiên dịch gói tin với giao thức cụ thể cho DUAL 
+- Interface DUAL với bảng định tuyến giao thức cụ thể 
+- Tính toán metric và truyền dữ liệu đến DUAL 
+- Thực hiện chức năng phân phối lại đến và từ các giao thức định tuyến khác
+- Phân phối lại các tuyến đã được học bởi giao thức định tuyến khác. 
+### 2.2 RTP
+- RTP cho phép PDM hoạt động, EIGRP dùng RTP thay cho TCP để thực hiện truyền và nhận gói EIGRP 
+
+![1](/image/68747470733a2f2f692e696d6775722e636f6d2f4236735a354c542e706e67.png)
+- EIGRP không thể dùng dịch vụ của UDP và TCP vì IPX và AppleTalk không dùng giao thức từ TCP/IP
+### 2.3 Các kiểu gói tin EIGRP
+ - RTP truyền gói EIGRP dưới dạng unicast hoặc multicast
+ - Gói Multicast EIGRP dùng dành riêng cho IPv4 multicast 224.0.0.10
+ - Gói Multicast EIGRP dùng dành riêng cho IPv6 multicast FF02::A
+ - EIGRP có 5 loại gói tin
+    - *Hello*: Gói tin tìm các Router lân cận để thiết lập kết nối. Gói tin này là multicast và truyền không tin cậy, nên không cần phản hồi từ bên nhận. 
+    - *Update*: EIGRP không gửi cập nhật định kì. Gói cập nhật chỉ được gửi khi cần thiết, bao gồm thông tin cần thiết, và chỉ gửi đến các router yêu cầu nó. Gói tin này sử dụng cách truyền tin cậy. 
+    - *Acknowledgment*: Gói tin ACK không tin cậy được gửi kể cả khi sử dụng cách truyền tin cậy. 
+    - *Query*: Gói tin truy vấn (query) khi tìm kiếm mạng, dùng cách truyền tin cậy và có thể sử dụng multicast hoặc unicast. 
+    - *Reply*: Gói trả lời được gửi trong gói phản hồi kể cả router có thông tin về truy vấn định tuyến. Gói tin này sử dụng truyền tin cậy và chỉ gửi bằng unicast (không sử dụng multicast)
+## 3. Quy trình xử lí EIGRP
+### 3.1 Những thông tin chứa trong bảng cấu trúc
+- Feasible Distance (FD): Là thông tin định tuyến nhỏ nhất mà EIGRP tính được cho từng mạch đích 
+- Router Sourch: Là nguồn phát khởi thông tin về một nguồn nào đó, phần thông tin này chỉ có đối với những kết nối ngoài mạng EIGRP 
+- Reported Distance (RD): Là thông số định tuyến đến 1 Router láng giềng được thông báo qua
+- Successor: Con đường được chọn làm đường chính đến mạng đích.
+- Feasible Successor (FS): là đường dự phòng cho đường successor. 
+## 4. EIGRP for IPv4 Configuration 
+- Làm theo mẫu 
