--- a/13. CDP và LLDP.md
+++ b/13. CDP và LLDP.md
@@ -1,1 +1,34 @@
 # CDP và LLDP
+- Cisco Discovery Protocol là tính năng độc quyền của Cisco được dùng để tập hợp thông tin của các thiết bị ở cùng data-link. 
+- Thiết bị của Cisco còn hỗ trợ Link Layer Discovery Protocol, là giao thức tìm kiếm lân cận tương tự CDP. 
+## 1. Tổng quan CDP 
+- CDP chạy trên mọi thiết bị của Cisco. Nó tập hợp địa chỉ giao thức của các thiết bị lân cận và tìm ra nền tảng của thiết bị đó. CDP chạy ở lớp data-link.
+
+![1](/image/68747470733a2f2f692e696d6775722e636f6d2f694e76334947492e706e67.png)
+- CDP có thể hỗ trợ tìm và xử lí lỗi với các thông tin: 
+    - Device ID: tên của thiết bị lân cận 
+    - Addresses: Địa chỉ IPv4 và IPv6 được dùng bởi thiết bị 
+    - Port ID: Tên của port local và remote
+    - Capabilities: Xác định xem thiết bị là router hay switch, hoặc có chức năng khác. 
+    - Version: Phiên bản CDP đang chạy trên thiết bị 
+    - Platform: Nền tảng phần cứng của thiết bị. 
+## 2. Cấu hình CDP
+
+![2](/image/2021-04-08_16-35-04.png)
+- Chỉ cần câu lệnh `no shut` trên cổng thì ta có thể dùng CDP để tìm kiếm thông tin của thiết bị 
+- Để tắt CDP, dùng câu lệnh `no cdp run`
+
+## 3. Tổng quan LLDP 
+- LLDP hoạt động với Router, Switch, Wireless LAN access points. 
+- Giao thức này dùng để quảng bá thông tin của nó đến các thiết bị khác trong mạng. 
+
+## 4. Cấu hình LLDP
+#### Router(config)# lldp run
+- Khi LLDP được bật, nó sẽ hoạt động ở tất cả interface. Để tắt LLDP ở một interface dùng câu lệnh `no lldp transmit` và `no lldp receive` 
+```
+Router(config)# interface *interface-id*
+Router(config-if)# no lldp transmit 
+Router(config-if)# no lldp receive
+Router(config-if)# end
+Router#
+```
