--- a/14. LAN Security and Device Hardening (Port Security).md
+++ b/14. LAN Security and Device Hardening (Port Security).md
@@ -1,1 +1,89 @@
 # LAN Security and Device Hardening (Port Security)
+- Ôn tập về Port security, kỹ thuật giảm nhẹ mối đe dọa đến LAN và đóng băng thiết bị. 
+## 1. Cấu hình Port Security
+- Nếu biết thiết bị nên dùng cáp nào và kết nối cụ thể đến interface nào trên một Switch, có thể dùng Port Security để hạn chế interface đó để chỉ có một số thiết bị có thể dùng. Điều này giúp giảm khả năng tiếp xúc với một số kiểu tấn công mà tin tặc kết nối một laptop đến một socket hoặc dùng cáp gắn vào thiết bị cuối để truy cập vào mạng 
+- Cấu hình Port Security cần nhiều bước. Về cơ bản, bạn cần tạo một access port, sau đó bật Port Security và cấu hình địa chỉ MAC của thiết bị được truy cập vào Port đó. 
+##### Bước 1: Cấu hình interface tại chế độ static access (truy cập tĩnh) `switch port mode access`
+##### Bước 2: Bật Port Security bằng lệnh `switchport port-security`
+##### Bước 3: Lựa chọn số lượng địa chỉ MAC tối đa được truy cập vào interface bằng câu lệnh *switchport port-security maxium`
+##### Bước 4: Lựa chọn hành động mặc định khi có sự xâm nhập *switch port-security violation {protect | restrict | shutdown}
+##### Bước 5: Xác định trước có địa chỉ MAC nguồn nào đang được cho phép bằng câu lệnh *switchport port-security mac-address. 
+##### Bước 6: Thay vì làm bước 5, cấu hình interface động học và cấu hình địa chỉ MAC hiện đang kết nối tới chủ bằng câu lệnh *switchport port-security mac-address sticky. 
+- Khi có thiết bị không được phép truy cập gửi gói tin đến switch, switch có thể đưa ra thông báo cung cấp thông tin, hủy các gói tin từ thiết bị đó, hoặc có thể hủy tất cả các frame bằng cách tắt interface. 
+
+|Tùy chọn lệnh **switchport port-security violation** |protect|restrict|shutdown|
+|:-------------:|:-------------:|:-------------:|:-------------:|
+|Hủy bỏ lưu lượng xâm nhập |Có|Có|Có|
+|Gửi log và thông báo SNMP|Không|Có|Có|
+|Tắt interface, hủy mọi lưu lượng|Không|Không|Có|
+
+- Nếu lựa chọn violation (vi phạm của thiết bị) không được cấu hình rõ ràng, lưu lượng của thiết bị được cho phép trên port cũng bị hủy vì port mặc định ở shutdown
+
+**Lưu ý: Sticky là cơ chế Switch tự động cập nhật địa chỉ MAC của thiết bị gắn vào đầu tiên** 
+
+## 2. Khôi phục Port sau khi bị vi phạm. 
+- Khi Port Security được bật ở một interface, hành động mặc định khi có vi phạm sẽ là shutdown port đó. 
+- Ta có 2 cách để xử lí vi phạm bảo mật
+     - Số lượng địa chỉ MAC tối đa được bảo đảm sẽ được thêm vào một bảng, còn 1 bảng chứa các địa chỉ MAC không được truy cập vào interface. 
+     - Địa chỉ được học hoặc cấu hình trong một interface an toàn được nhìn thấy bởi interface bảo đảm khác trong cùng một VLAN.
+
+## 3. Giảm nhẹ sự đe dọa đến LAN
+### 3.1 DHCP Snooping 
+- DHCP là kĩ thuật cấu hình Switch để phòng tránh man-in-the-middle được tấn công từ DHCP server.
+
+![1](/image/68747470733a2f2f692e696d6775722e636f6d2f694857397241762e706e67.png)
+
+- Các cổng trên switch sẽ phân loại thành các cổng tin cậy và không tin cậy. Các cổng tin cậy sẽ cho phép nhận DHCP Reply và được gắn với Server DHCP còn đối với các cổng không tin cậy nó thì sẽ chỉ cho phép nhận DHCP Request gắn với máy tính người dùng. 
+- Một số đặc trưng của cấu hình DHCP Snooping
+    - `Trusted ports:` Port được tin cậy 
+    - `Untrusted ports, server messages:` Port không tin cậy và hủy mọi tin được cho rằng đến từ server này. 
+    - `Untrusted ports, client messages:` Port không tin cậy, áp dụng thêm logic phức tạp. Kiểm tra mỗi tin DHCP gửi đến xung đột với DHCP hiện tại trong bảng thông tin bắt buộc. 
+    - ` Rate limiting:` Tính năng giới hạn số lượng tin DHCP nhận mỗi giây, mỗi port. 
+
+### 3.2 Native and Management VLAN Modification
+- Nên cấu hình 1 VLAN khác biệt với VLAN 1 để quản lí, kích hoạt, thay đổi. 
+
+![2](/image/68747470733a2f2f692e696d6775722e636f6d2f6f376a484466342e706e67.png)
+
+- Native VLAN có nhiều ứng dụng, họ thường tạo 1 VLAN để quản lí và làm chủ. 
+
+- Mục đích của việc lấy 1 VLAN làm native và cài ở chế độ `trunk` để duy trì khả năng tương thích. 
+
+### 3.3 Switch Port Hardening
+- Interface của Router phải được kích hoạt với câu lệnh `no shutdown` trước khi có thể hoạt động. 
+- Tắt các interface với câu lệnh `shutdown`
+- Ngăn chặn VLAN trunk bằng câu lệnh `switchport mode access` 
+- Thông thường tất cả các port đều thuộc VLAN1  
+
+### 3.4 AAA
+- Cấu hình tên đăng nhập và mật khẩu trên tất cả các thiết bị mạng khó có thể mở rộng. Có một cách tốt hơn là dùng server bên ngoài tập trung và bảo mật. Để giải quyết vấn đề này, thiết bị Cisco đã hỗ trợ Authentication, Authorization, Accounting để giúp bảo mật thiết bị truy cập. 
+- 2 giao thức xác thực được hỗ trợ trên các thiết bị:
+    - Terminal Access Controller Access-Control System Plus (TACACS+)
+    - Remote Authentication Dial-In User Service (RADIUS)
+- Một ISP (nhà cung cấp dịch vụ) lớn nên dùng `RADIUS` vì nó hỗ trợ chi tiết tài khoản cho người dùng trả phí. 
+- Các doanh nghiệp với các nhóm người dùng nên dùng `TACACS+` vì nó yêu cầu chính sách ủy quyền để áp dụng vào mỗi nhóm, mỗi người dùng. 
+
+![3](/image/2021-04-12_15-47-43.png)
+
+### 3.5 802.1X 
+- IEEE 802.1X là giao thức xác thực và kiểm soát truy cập dựa trên port
+- **Client (supplicant)**: Đây thường là port 8202.1X kích hoạt trên các thiết bị yêu cầu truy cập LAN và dịch vụ của Switch và trả lời yêu cầu từ Switch
+- **Switch (authenticator)**: Switch kiểm soát truy cập vật lý và mạng. Switch hoạt động như 1 proxy giữa client và server xác thực
+- **Authentication server**: Server xác thực hoạt động để xác thực thông tin của client xác nhận danh tính của Client và thông báo cho Switch là client có quyền truy cập
+
+![4](/image/68747470733a2f2f692e696d6775722e636f6d2f773350414b75492e706e67.png)
+
+## 4 Cấu hình SSH 
+- Là hình thức quản trị từ xa TCP port 22, đảm bảo tất cả dữ liệu từ PC quản trị tới Router đều được mã hóa. 
+- SSH cũng là phương thức bảo mật an toàn, Telnet port 23 chỉ truyền tải văn bản thuần túy không đảm bảo ngay cả khi đăng nhập và dữ liệu trong quá trình kết nối. 
+
+![4](/image/2021-04-12_16-09-26.png)
+
+1. Kiểm tra xem Switch có hỗ trợ SSH không **show ip ssh**
+2. Cấu hình một DNS **ip domain-name**
+3. Cấu hình **crypto key generate rsa** để tạo 1 khóa RSA
+4. Đổi đường vty để dùng tên đăng nhập 
+5. Cấu hình Switch chỉ cho phép kết nối SSH **transport input ssh**
+6. Thêm 1 hoặc nhiều tên đăng nhập, mật khẩu
+7. Có thể thay đổi SSH thành phiên bản 2.0
+8. Kiểm tra SSH bằng câu lệnh **show ip ssh**
