--- a/15. STP.md
+++ b/15. STP.md
@@ -1,1 +1,13 @@
 # STP (Spanning Tree Protocol) 
+- Phương thức hoạt động của STP 
+## 1. Khái niệm và hoạt động
+- Giao thức Spanning Tree cung cấp liên kết dự phòng để mạng chuyển mạch lớp 2 có thể khôi phục từ lỗi mà không cần có sự can thiệp kịp thời.
+- Nó cũng ngăn chặn việc lặp vòng
+- Nếu không có STP có thể gây ra một số lỗi: 
+    - *Broadcast storms*: Mỗi Switch truyền bá thông tin không ngừng, gây hiện tượng vòng lặp và treo Switch.
+    - *Multiple frame transmisson*: Trùng lặp Frame.
+    - *MAC database instability*: Bất ổn bảng địa chỉ MAC. 
+![1](/image/2021-04-12_16-49-56.png)
+## 2. Thuật toán STP 
+- STP đặt trên các port nhất định trong trạng thái block vì thế nó không thể nghe, chuyển tiếp hay truyền dữ liệu. STP tạo ra một hệ cây đảm bảo chỉ có 1 đường dẫn tồn tại cho mỗi đoạn mạng. Nếu đoạn nào gặp gián đoạn trong kết nối, STP xây dựng lại một hệ cây mới bằng cách kích hoạt đường dự phòng.
+- Thuật toán STP chọn interface ở trạng thái đang chuyển tiếp. Nếu không chọn được trong này, STP sẽ chọn interface trong trạng thái bị chặn.
