--- a/15. STP.md
+++ b/15. STP.md
@@ -7,7 +7,98 @@
     - *Broadcast storms*: Mỗi Switch truyền bá thông tin không ngừng, gây hiện tượng vòng lặp và treo Switch.
     - *Multiple frame transmisson*: Trùng lặp Frame.
     - *MAC database instability*: Bất ổn bảng địa chỉ MAC. 
+
 ![1](/image/2021-04-12_16-49-56.png)
-## 2. Thuật toán STP 
+
+### 1.1 Thuật toán STP 
 - STP đặt trên các port nhất định trong trạng thái block vì thế nó không thể nghe, chuyển tiếp hay truyền dữ liệu. STP tạo ra một hệ cây đảm bảo chỉ có 1 đường dẫn tồn tại cho mỗi đoạn mạng. Nếu đoạn nào gặp gián đoạn trong kết nối, STP xây dựng lại một hệ cây mới bằng cách kích hoạt đường dự phòng.
 - Thuật toán STP chọn interface ở trạng thái đang chuyển tiếp. Nếu không chọn được trong này, STP sẽ chọn interface trong trạng thái bị chặn.
+
+### 1.2 Hội tụ STP 
+- Là quá trình switch thu thập sự thay đổi trong mô hình LAN. Switch xác định cần thay đổi để chặn port hoặc chuyển tiếp port. 
+- Thuật toán STP được áp dụng theo các bước sau đây.
+    - Bình bầu root bridge (Switch có BID thấp nhất). Chỉ có root bridge có thể tồn tại với mỗi mạng. Mọi port ở root bridge đều ở trạng thái chuyển tiếp. 
+    - Bầu root port. Là port cung cấp đường về root-switch mà có tổng path-cost là nhỏ nhất. Mỗi nonrootswitch chỉ có 1 root-port. 
+    - Bầu designed port cho mỗi đoạn. Dựa theo giá trị path cost nhỏ nhất. Mỗi đường dẫn sẽ có 1 designed port. Tất cả các port của RootSwitch đều là designed port.
+    - Root port và designed port chuyển thành trạng thái chuyển tiếp. 
+
+![1](/image/2021-04-13_14-08-10.png)
+
+### 1.3 Các loại STP 
+- Một số loại STP được dựa trên chuẩn IEEE 802.1D
+1. STP: là gốc của STP, cung cấp một mô hình mạng không lặp trong mạng với các đường dẫn dự phòng. 
+2. PVST+: Per-VLAN Spanning Tree Plus là bản nâng cấp của Cisco cung cấp khả năng cấu hình cho mỗi VLAN trong mạng. 
+3. RSTP: Rapid STP, hoặc IEEE 802.1w, là sự phát triển của STP cung cấp khả năng hội tụ nhanh hơn. 
+4. Rapid PVST+: Bản nâng cấp của RSTP là sử dụng PVST+. 
+5. Multiple Spanning Tree Protocol: MSTP là chuẩn IEEE. MSTP đặt nhiều VLAN vào cùng một spanning tree. 
+
+|Giao thức|Tiêu chuẩn|Tài nguyên cần|Hội tụ|Tính toán hệ cây|
+|:-------:|:--------:|:------------:|:----:|:--------------:|
+|STP|802.1D|Thấp|Chậm|Tất cả VLAN|
+|PVST+|Cisco|Cao|Chậm|Mỗi VLAN|
+|RSTP|802.1w|Trung bình|Nhanh|Tất cả VLAN|
+|Rapid PVST+|Cisco|Rất cao|Nhanh|Mỗi VLAN|
+|MSTP|802.1s, Cisco|Trung bình hoặc cao|Nhanh|Mọi trường hợp|
+
+### 1.4 PVST 
+- PVST+ là cài đặt mặc định của tất cả thiết bị Cisco. Trong môi trường PVST+, ta có thể tùy chỉnh một nửa VLAN theo mỗi đường trunk. Bạn có thể cấy hình bầu một root bridge tại swicth thứ nhất cho một nửa VLAN trong mạng và bầu một root bridge tại switch thứ hai cho các VLAN còn lại. 
+
+![2](/image/2021-04-13_14-43-47.png)
+
+##### Port States
+- Spanning tree được xác định ngay khi switch vừa được bật lên. Nếu cổng switch chuyển tiếp từ chặn thành chuyển tiếp mà không có đầy đủ thông tin về mô hình mạng thì cổng đó có thể tạo dữ liệu lặp. 
+
+|Cho phép hoạt động|Blocking|Listening|Learning|Forwarding|Disabled|
+|-------------|:-------------:|:-------------:|:-------------:|:-------------:|:-------------:|
+|Có thể nhận và xử lý BPDU|Có|Có|Có|Có|Không|
+|Có thể chuyển tiếp dữ liệu nhận trên interface|Không|Không|Không|Có|Không|
+|Có thể chuyển tiếp dữ liệu chuyển từ interface khác|Không|Không|Không|Có|Không|
+|Có thể học địa chỉ MAC|Không|Không|Có|Có|Không|
+
+### 1.5 Các trạng thái khi STP khởi động 
+1. Disable: down
+2. Blocking: nhận BPDU, không gửi BPDU, không học MAC, không forward frame
+3. Listening: nhận BPDU, gửi BPDU, không học MAC, không forward frame
+4. Leaning: nhận BPDU, gửi BPDU, học MAC, không forward frame
+5. Forwarding: nhận BPDU, gửi BPDU, học MAC, forward frame. 
+- Thời gian chuyển trạng thái 
+    - Blocking sang Listening mất 20(s)
+    - Listening sang Leaning mất 15(s)
+    - Leaning sang Forwarding mất 15(s)
+
+
+## 2. Rapid PVST+ Operation 
+- Mỗi RSTP được sử dụng cho một VLAN nên gây tốn tài nguyên (CPU và RAM)
+- Với RSTP, IEEE cải thiện khả năng hội tụ của STP từ 50 đến ít hơn 10 giây. 
+**Khả năng cắt lặp và xóa bỏ single point of failure một hệ thống mạng hiệu quả của STP, nhưng lại có nhược điểm thời gian hội tụ chậm**
+
+### 2.1 RSTP Interface Behavior
+
+![3](/image/2021-04-13_15-47-38.png)
+- Trong RSTP, trạng thái Discarding sẽ thay thế cho 3 trạng thái của 802.1D (Disabled, Blocking, Listening) 
+- Trạng thái Discarding có nghĩa là Port sẽ không truyền hay nhận dữ liệu hoặc học địa chỉ MAC, kể cả Port này bị tắt hay gặp sự cố. 
+- Khi RSTP quyết định chuyển từ Discarding sang Forwarding, Port đó sẽ đến trạng thái Learning. 
+- RSTP không còn cần trạng thái Listening nữa bởi vì nó sẽ chủ động hỏi các thiết bị láng giềng,bảo đảm sao cho không bị vòng lặp(Loop). RSTP dùng thuật ngữ vai trò cổng (role) để chỉ ra một cổng là Root Port hay là một Designated Port.RSTP sử dụng Root Port và Designated Port giống như trong 802.1D
+- RSTP cung cấp sự hội tụ nhanh dựa theo kết nối tới interface
+    - Edge-type và PortFast: Nếu ta cấu hình 1 cổng là Edge Port trên Switch chạy RSTP bằng lệnh `spanning-tree portfast` thì cổng này chuyển sang trạng thái Forwarding. Ta chỉ nên kích hoạt nó trên cổng kết nối đến trạm cuối duy nhất. 
+    - Link-type shared (Root Port): RSTP hoạt động giống STP trên chia sẻ link-type
+    - Link-type point-to-point: RSTP cải thiện hội tụ đường dẫn song công giữa các Switch.
+
+### 2.2 Edge Ports
+- Edge Port là một khái niệm của Cisco Spanning Tree. Cơ bản nó tương ứng với tính năng PortFast.
+- Theo định nghĩa, thì port này không thể hình thành loop, và có thể ở trạng thái forwarding ngay lập tức. Tuy nhiên, nếu không nhận được BPDU thì ngay lập tức port đó sẽ mất trạng thái Edge port
+
+![4](/image/2021-04-13_16-23-21.png)
+
+## 3. Cấu hình và kiểm tra STP. 
+
+## 4. Switch Stacking 
+
+- Xếp chồng nhiều lớp Switch giúp người quản trị mạng quản lý nhiều Switch như 1 Switch
+- Quản lí tập trung và dễ dàng mở rộng. 
+- Tăng/giảm member trong stack không gây ảnh hưởng hệ thống. 
+- STP,CDP,VTP chạy trên 1 Swtich
+- Chỉ cần cấu hình một file đồng nghĩa tất cả thiết bị đều được đồng bộ. 
+- Tất cả chỉ có 1 bảng địa chỉ MAC, không lo bị loop vì tất cả nối với nhau thành một single switch. 
+
+![5](/image/2021-04-13_16-31-42.png)
