--- a/16. EtherChannel và HSRP.md
+++ b/16. EtherChannel và HSRP.md
@@ -1,1 +1,20 @@
 # EtherChannel và HSRP
+- Công nghệ EtherChannel giúp gộp nhiều interface vật lý thành một kênh logic để tăng băng thông trên đường dẫn point-to-point. EtherChannel cung cấp một cách để ngăn chặn hội tụ của STP khi chỉ xảy ra sự cố ở một port hoặc cáp
+- Hầu hết các thiết bị đầu cuối không lưu định tuyến đến mạng truy nhập từ xa. Thay vào đó, chúng được cấu hình một default gateway để xử lý định tuyến cho chúng, để đảm bảo một thiết bị vẫn truy cập được vào mạng, phải triển khai các loại default gateway dự phòng.
+
+## 1. Giới thiệu về EtherChannel 
+
+![1](/image/2021-04-13_16-53-38.png)
+- Đây là công nghệ được triển khai bởi Cisco, có thể gộp lên đến 8 đường dẫn có tốc độ bằng nhau giữa 2 Switch
+- Công nghệ `bó` các đường dẫn này lại thành một đường nhằm tăng tốc độ băng thông. Đây là một đường logical nên STP sẽ không tiến hành khóa bất kì cổng nào và ta có thể tận dụng tối đa băng thông. 
+- Công nghệ này phải áp dụng cả 2 đầu Switch, nếu chỉ một trong hai đầu dùng EtherChannel sẽ gây hiện tượng `loop`
+
+### 1.1 Lợi ích của EtherChannel 
+- Khi cấu hình EtherChannel kết quả của interface ảo gọi là *port channel*
+- Hầu hết ta có thể cấu hình trên interface của Etherchannel thay vì cấu hình riêng trên các port
+- EtherChannel dựa vào port có sẵn của Switch để tăng cường băng thông
+- EtherChannel có thể cân bằng tải 
+- EtherChannel cung cấp dự phòng. Sự mất mát của một liên kết vật lý không tạo ra thay đổi trong topo.
+
+### 1.2 Hạn chế
+- Yêu cầu sự đồng nhất giữa các *interface*. FE và GE không thể 
