--- a/16. EtherChannel và HSRP.md
+++ b/16. EtherChannel và HSRP.md
@@ -17,4 +17,72 @@
 - EtherChannel cung cấp dự phòng. Sự mất mát của một liên kết vật lý không tạo ra thay đổi trong topo.
 
 ### 1.2 Hạn chế
-- Yêu cầu sự đồng nhất giữa các *interface*. FE và GE không thể 
+- Yêu cầu sự đồng nhất giữa các *interface*. FE và GE không thể cùng kết hợp với nhau ở cùng EtherChannel
+- Mỗi EtherChannel có thể có 8 port Ethernet được cấu hình tương thích 
+- Phần mềm Cisco IOS hiện tại hỗ trợ đến 6 EtherChannel 
+- Tất cả các port phải ở L2 hoặc L3
+- Cấu hình EtherChannel phải nhất quán ở 2 Switch. Cấu hình trunk,... phải giống nhau. Tất cả phải ở port Layer2.
+
+## 2. Giao thức EtherChannel 
+- Bạn có thể cấu hình EtherChannel tĩnh hoặc vô điều kiện, tuy nhiên bạn có thể sử dụng 2 phương thức để đàm phán quá trình là Port Aggregation Protocol (PAgP) và Link Aggregation Control Protocol (LACP). Cả hai giao thức này đảm bảo 2 bên của liên kết có cấu hình tương thích (speed, duplex, VLAN)
+
+### 2.1 Port Aggregation Protocol
+- Đây là giao thức độc quyền của Cisco tự động tạo liên kết EtherChannel. PAgP kiểm tra tính nhất quán của cấu hình và quản lí liên kết được thêm vào giữa hai switch. Nó đảm bảo rằng khi EtherChannel được tạo, tất cả port sẽ cùng kiểu cấu hình. 
+- Chỉ hỗ trợ ghép tối đa 8 link vật lí thành 1 link logical
+- **On**: Chế độ này đẩy interface sang dạng Channel mà không cần PAgP. Không cần trao đổi gói tin, được dùng hiệu quả trên các thiết bị không hỗ trợ PAgP hoặc LACP. Chỉ lên được Channel khi cả 2 đầu đều ở trạng thái `on`
+- **Desirable**: là chế độ ở trạng thái active, các port ở trạng thái này sẽ tự đàm phán với các interface khác bằng cách gửi các gói PAgP 
+- **Auto**: là chế độ ở trạng thái passive, các port sẽ phản hồi gói tin PAgP từ đầu khác nhưng không tự gửi gói tin PAgP. 
+
+![1](/image/2021-04-14_14-12-21.png)
+
+### 2.2 Link Aggregation Control Protocol
+- Là giao thức chuẩn quốc tế IEEE 802.3ad và có thể dùng được cho hầu hết cho các thiết bị thuộc các hãng khác nhau. 
+- Tương tự như PAgP. LACP cũng cần phải cùng speed, duplex mode, native VLAN, VLAN range, trunking status và type. 
+- Hỗ trợ ghép tối đa 16 link vật lí thành một link logic (8 port active - 8 port passive)
+- **On**: Chế độ này đẩy interface sang dạng Channel mà không cần gửi các gói LACP. Chế độ này thường không được dùng. 
+- **Active**: Chế độ tự động thương lượng với switch để hình thành EtherChannel. 
+- **Passive**: Chế độ bị động, hình thành EtherChannel khi nhận được gói LACP. 
+
+![2](/image/2021-04-14_14-36-18.png)
+
+## 3. Cấu hình EtherChannel 
+1. Xác định các interface muốn gộp vào một liên kết và dùng câu lệnh **interface range interfaces**
+2. Tạo port channel bằng câu lệnh **channel-group** *identifier* **mode** *mode*. Trong đó *identifier* được chọn ngẫu nhiên từ 1-6 và *mode* có thể chọn `on`, `PAgP`, `LACP`.
+3. Vào interface cấu hình trạng thái. **interface port-channel** *identifier* trong đó *identifier* trùng với số chọn ở trên. 
+4. Cấu hình trunking và VLAN.
+
+## 4. Khắc phục sự cố EtherChannel
+- Tất cả các interface trong EtherChannel cần phải có chung cấu hình 
+- Chỉ định tất cả các port trong EtherChannel phải có cùng VLAN, hoặc cấu hình chúng là trunk. Port có native VLAN khác nhau không thể tạo thành EtherChannel
+- Lựa chọn thương lượng tự động cho PAgP và LACP phải được cấu hình tương thích trên 2 đầu của EtherChannel
+
+## 5. First-Hop Redundancy Concepts
+- FHRP cho phép bạn cài đặt nhiều bộ định tuyến trong một dải như một bộ định tuyến mặc định. 
+- Khi ta có 2 gateway thì nó sẽ tạo ra 1 gateway ảo để ra ngoài. Lúc này 2 gateway tự thương lượng với nhau để đi ra ngoài. Lúc này end user sẽ luôn luôn ra ngoài qua gateway ảo. 
+
+### 5.1 FHRPs
+- 3 tùy chọn của FHRP
+    - Hot Standby Router Protocol (HSRP): chuẩn độc quyền của Cisco, nhằm cung cấp tính sẵn sàng làm việc cao của hệ thống mạng bằng cách đưa ra sự dự phòng cho các host trên mạng LAN. Giám sát trạng thái của nhóm HSRP và nhanh chóng chuyển tiếp gói tin sang dự phòng nếu Router đang active bị lỗi.
+    - Virtual Router Redundancy Protocol (VRRP): thực hiện cùng chức năng với HSRP nhưng đa dạng với các thiết bị khác nhau. VRRP không còn chức năng giám sát trạng thái của cổng. Nó chủ động gán trách nhiệm cho một hoặc nhiều Router VRRP ảo trong LAN dùng IPv4
+    - Gateway Load Balancing Protocol (GLBP): là giao thức mới, độc quyền của Cisco có thêm đặc tính cân bằng tải. 
+
+## 6. Cách thức hoạt động của HSRP 
+- HSRP hoạt động dựa trên việc tạo ra một gateway ảo. Trong một nhóm các Router sẽ có một router đứng ra đảm nhiệm vai trò gateway
+- Các router này sẽ sinh ra một địa chỉ IP ảo và địa chỉ MAC ảo. Tất cả các router trong mạng LAN đều biết đến địa chỉ này và khi router active bị lỗi thì chúng đều có thể thay thế làm dự phòng. 
+
+### 6.1 HSRP Priority và Preemption 
+- HSRP bầu chọn Router nào là Active dựa vào Priority (có giá trị từ 0 đến 225), router nào có priority lớn nhất sẽ được chọn làm active, nếu priority bằng nhau thì router nào có địa chỉ IP cao hơn sẽ được chọn làm active. 
+- Thông thường, khi một Router đã là active thì dù có Router mới có priority cao hơn cũng sẽ không được chọn làm active, nếu muốn thì ta cần chuyển sang chế độ Preemtion để bình bầu lại. 
+
+### 6.2 Cấu hình HSRP 
+
+### 6.3 HSRP cân bằng tải
+
+![3](/image/2021-04-14_15-51-13.png)
+
+- Hai router R1 và R2 cùng chạy HSRP. 
+- Ta tạo hai VLAN và hai địa chỉ VLAN. 
+- R1 ta chỉnh Priority lớn đối với VLAN10 và nhỏ đối với VLAN20.
+- R1 sẽ là active của VLAN10 và là standby của VLAN20 
+- R2 ta chỉnh Priority lớn đối với VLAN20 và nhỏ đối với VLAN10 
+- R2 sẽ là active của VLAN20 và là standby của VLAN10 
