--- a/17. ACL.md
+++ b/17. ACL.md
@@ -1,1 +1,39 @@
 # ACL
+- Tìm hiểu về Access Control lists (ACLs). Người quản trị dùng ACLs để dừng lưu lượng hoặc chỉ cho phép đi qua trên mạng của họ. 
+- Bạn có thể cấu hình ACLs trên router để điều khiển được lưu lượng truyền qua router. 
+
+## 1. Cách hoạt động của ACL 
+- Về mặc định, Router hoạt động thì sẽ cho phép chuyển tiếp tất cả các gói tin. ACL có thể trợ giúp cơ bản về bảo mật. ACL làm tăng độ trễ của Router, và chúng ta không chỉ có một giải pháp bảo mật này. 
+- Với các doanh nghiệp lớn, người quản trị cần sử dụng phối hợp nhiều giải pháp khác nhau sẽ được đề cập tại các chương trình nâng cao. 
+
+### 1.1 Xác định ACL
+- ACL là cách cấu hình trên router để điều khiển cho phép hoặc từ chối gói tin đi qua, dựa trên tập tin tiêu đề. 
+- Để xác định gói tin được truyền qua hay từ chối, nó kiểm tra ACL theo tuần tự. Khi một ALC khớp thì nó dừng lại
+- Deny Any được hiểu ở cuối ACL, nếu gói không trùng với điều kiện nào trong ACL, nó sẽ bị bỏ. 
+
+### 1.2 Processing Interface ACLs
+- ACL có thể ứng dụng với cả lưu lượng cổng vào và lưu lượng cổng ra. Tuy nhiên cần ACL khác nhau cho 2 hướng. 
+
+### 1.3 List Logic with IP ACLs
+
+![1](/image/2021-04-14_16-46-58.png)
+- Nếu gói trùng với 1 dòng trong ACL, Router sẽ áp dụng và từ chối các ACL còn lại. 
+
+## 2. Cách sử dụng ACLs
+
+### 2.1 Phân loại ACLs
+- `Standard IPv4 ACLs`: Lọc lưu lượng dựa trên địa chỉ nguồn 
+- `Extended IPv4 and IPv6 ACLs`: Có thể lọc dựa trên địa chỉ nguồn và đích, giao thức. Nguồn và đích của TCP và UDP port.
+- `Numbered IPv4 ACLs`: Sử dụng để nhận dạng.
+- `Named IPv4 and IPv6 ACLs`: Sử dụng tên để nhận dạng. 
+
+### 2.2 ACL Identification
+
+| Giao thức| Phạm vi|
+|:--------:|:------:|
+| IP| 1-99|
+| Extended IP| 100-199|
+| Standard IP (expanded)| 1300-1999|
+| Extended IP (expanded)| 2000–2699|
+
+
