--- a/18. DHCP và DNS.md
+++ b/18. DHCP và DNS.md
@@ -1,1 +1,43 @@
 # DHCP và DNS
+- Tìm hiểu về 2 giao thức cấp phát địa chỉ host, cấu hình địa chỉ IP tự động là: Dynamic Host Configuaration Protocol (DHCP) and Domain Name System (DNS)
+## 1. DHCPv4
+- DHCPv4 cho phép host có được IP một cách tự động khi kết nối vào mạng.
+- Khi một thiết bị được cấu hình DHCPv4 hoặc kết nối vào mạng, nó sẽ gửi một bản tin DHCPDISCOVER tới broadcast để tìm DHCPv4 servers trong mạng. DHCPv4 servers sẽ trả lời bằng gói tin DHCPOFFER, bao gồm thông báo cho thuê địa chỉ IP, subnet mask, DNS server và thông tin default gateway, cũng như thời hạn cho thuê. 
+- Client có thể nhận nhiều gói DHCPOFFER nếu có nhiều Server DHCPv4. Client chọn đề nghị đầu tiên và quảng bá gói DHCPREQUEST để xác định rõ server
+- Nếu địa chỉ IP vẫn hợp lệ, Server được chọn trả lại tin DHCPPACK. Nếu không nó trả lại tin DHCPNAK. Nếu như thiết bị tắt hoặc ra ngoài mạng, địa chỉ sẽ được trả lại để tái sử dụng
+- DHCP lease
+    - Là khoảng thời gian thiết bị giữ nguyên địa chỉ IP trước khi nó được thay đổi và gia hạn. Cụ thể, mỗi địa chỉ IP sẽ có một vòng đời nhất định. Khi hết thời gian này nó sẽ được cấp một địa chỉ mới.
+
+    - Ví dụ: địa chỉ IP có vòng đời 24 giờ. Trong khoảng thời gian này dù bạn ngắt kết nối mạng và kết nối lại, địa chỉ IP vẫn không đổi. Chỉ sau khi hết 24 giờ, một địa chỉ mới sẽ được cấp phát và gia hạn.
+
+    - Trường hợp gặp các vấn đề với địa chỉ IP, bạn có thể yêu cầu cấp mới mà không cần chờ hết vòng đời. Các thiết lập này dễ dàng tìm thấy trong cài đặt mạng trên máy tính hoặc thiết lập wifi trên điện thoại.
+
+![1](/image/2021-04-16_14-04-24.png)
+
+## 2. Configuration DHCPv4
+
+## 3. DHCPv6
+- IPv6 dùng 2 phương thức để lấy địa chỉ unicast
+    - Sử dụng cấu hình tự động địa chỉ không trạng thái (stateless address autoconfiguration: SLAAC)
+    - Có thể được cấp một địa chỉ và những thông số hoạt động với DHCPv6: được cấp một địa chỉ và những thông số hoạt động với DHCPv6. (Stateful DHCPv6 )
+
+### 3.1 SLAAC
+- Một node có thể tự cấu hình địa chỉ của riêng nó, sử dụng những thông tin trên mạng. Nó được gọi là “không trạng thái – stateless” vì không có gì khác ngoài chính node tự quản lý địa chỉ của nó.
+- Cho phép các thiết bị kết nối vào mạng mà không cần bất kỳ cấu hình nào và cũng không cần có bất kỳ máy chủ nào
+
+![2](/image/2021-04-16_14-38-35.png)
+
+- PC-B gửi RS tới địa chỉ multicast của tất cả routers, FF02::2, thông báo với các IPv6 local rằng nó cần RA. 
+- Router A nhận bản tin RS và trả lời với bản tin RA. Bao gồm prefix và prefĩ lengh của mạng. 
+- PC-B sử dụng thông tin để tạo địa chỉ unicast IPv6
+- Trước khi PC-B có thể sử dụng địa chỉ IPv6, nó cần quá trình DAD, gửi tới NS để xác nhận địa chỉ là duy nhất. 
+- Tham khảo thêm tại: [thamkhao](https://www.vnnic.vn/ipv6/thamkhao/t%E1%BB%B1-%C4%91%E1%BB%99ng-c%E1%BA%A5u-h%C3%ACnh-%C4%91%E1%BB%8B-ch%E1%BB%89-trong-ipv6)
+## 4. Configuration DHCPv6
+
+## 5. Cách thức hoạt động DNS
+- Là hệ thống máy chủ phân giải tên miền thành địa chỉ IP. 
+
+![3](/image/2021-04-16_15-01-11.png)
+- Khi bạn nhập một URL, máy tính sử dụng DNS để gửi yêu cầu phân giải URI thành địa chỉ IP. 
+
+![4](/image/2021-04-16_15-02-50.png)
