--- a/19. NAT.md
+++ b/19. NAT.md
@@ -1,1 +1,59 @@
 # NAT
+- Để giải quyết tạm thời việc cạn kiệt IPv4, một trong số các phương pháp là NAT. 
+- NAT cho phép các host trong mạng kết nối ra Internet bằng một địa chỉ IPv4 hợp pháp. 
+- Sử dụng NAT, người quản trị chỉ cần một hoặc một vài địa chỉ IPv4 cho router cung cấp cho các host, thay vì dùng một địa chỉ duy nhất cho mỗi client tham gia vào mạng. 
+## 1. Khái niệm 
+- NAT chuyển đổi địa chỉ IPv4 bằng cách cho phép mạng đích dùng địa chỉ IPv4 private. NAT cho phép ẩn địa chỉ IPv4 với mạng bên ngoài. 
+
+![1](/image/2021-04-16_15-41-57.png)
+- R2 là router biên, là nơi kết nối mạng từ nhà cung cấp đến người dùng. Ta thực hiện NAT trên R2
+- **Inside local address**: Gần giống các địa chỉ private
+- **Inside global address**: Là địa chỉ đăng kí với nhà cung cấp dịch vụ, dùng để thay thế 1 hay nhiều địa chỉ inside local
+- **Outside global address**: Đây là địa chỉ IP của một thiết bị nằm ở mạng bên ngoài. Các thiết bị thuộc mạng bên trong sẽ tìm thấy thiết bị thuộc mạng bên ngoài thông qua địa chỉ IP này. Có thể là địa chỉ Private. 
+- **Outside local address**: Đây là địa chỉ IP được đặt cho một thiết bị nằm ở mạng bên ngoài. Địa chỉ này là một IP hợp lệ trên mạng internet.
+
+![2](/image/2021-04-16_15-42-33.png)
+1. R1 gửi gói tin đến Internet cho R1
+2. R1 chuyển tiếp gói tin đến R2
+3. R2 xem bảng định tuyến và xác định next hop là Router ISP. Nó kiểm tra nếu có tiêu chí đặc biệt nào để biên dịch. R2 có một ACL xác định mạng bên trong phù hợp để biên dịch. Vì thế, nó biên dịch địa chỉ IPv4 local thành địa chỉ IPv4 global
+4. R2 tùy chỉnh gói tin với nguồn là IPv4 mới và gửi đến Router ISP
+5. Gói tin đến đích và gửi trả lời đến địa chỉ inside global
+6. Khi nhận trả lời từ đích trở lại R2, nó xem bảng NAT để trùng với địa chỉ inside global để chính xác địa chỉ inside local
+7. R1 nhận gói và gửi đến PC1
+
+### 1.1 Dynamic và Static NAT
+- Dynamic NAT: Một địa chỉ IP Private sẽ được map với một địa chỉ IP Public trong nhóm địa chỉ IP Public.
+    - Dynamic có thể cấu hình Overload 
+- Static NAT: Static NAT (NAT tĩnh) là phương thức NAT one to one. Một IP Private sẽ được map với một IP Public. Static NAT cực kỳ hiệu quả nếu sử dụng các thiết bị có IP cố định để truy cập internet bên ngoài.
+
+## 2. NAT overload
+- Là kĩ thuật ghép nhiều địa chỉ IPv4 private thành 1 hoặc một vài địa chỉ IPv4. Để làm việc này, port number sẽ theo dõi mỗi địa chỉ private, khi nhận được phản hồi từ bên ngoài, sẽ xác định chính xác client và biên dịch gói tin. 
+
+![3](/image/2021-04-16_16-19-57.png)
+
+1. PC1 và PC2 gửi gói tin ra ngoài đến Internet
+2. R2 nhận được gói tin, sử dụng kĩ thuật NAT overload, thay đổi địa chỉ nguồn thành inside global ip và lưu một bản ghi về port nguồn, để xác định client gửi gói tin. 
+3. R2 cập nhật bảng NAT. R2 định tuyến gói tin đến Internet. 
+4. Khi web server trả lời bản tin, R2 sử dụng port nguồn để xác định và biên dịch trả gói tin theo đúng client.
+
+## 3. NAT benefits
+- NAT giữ được địa chỉ IPv4 đã đăng ký vì với NAT overload, các host nội bộ có thể cùng dùng một địa chỉ IPv4 public.
+- NAT có thể dễ dàng điều chỉnh phù hợp với các kết nối tới mạng public.
+- NAT bảo toàn những địa chỉ IP sẵn có và hỗ trợ địa chỉ public mới.
+- NAT là một lớp bảo mật vì địa chỉ private được bảo mật. 
+
+## 4. Hạn chế của NAT
+- **Performance is degraded:** Tăng độ trễ khi chuyển mạch 
+- **End-to-end functionality is degraded:** Nhiều giao thức Ethernet và ứng dụng phụ thuộc end-to-end. Cần phải biết rõ địa chỉ IP 2 đầu. 
+- **End-to-end IP traceability is lost:** Vì địa chỉ được ánh xạ sang địa chỉ khác nên khi gặp lỗi khó khắc phục.
+- **Tunneling is more complicated:** Tunneling phức tạp hơn, ví dụ như IPsec. Vì NAT thay đổi giá trị header
+- **Services can be disrupted:** Một số dịch vụ có thể bị gián đoạn. Ví dụ như tạo kết nối TCP từ bên ngoài hoặc kết nối stateless dùng giao thức UDP.
+
+## 5. Configuration NAT
+
+## 6. NAT for IPv6
+- Mục đích: 
+    - NAT của IPv6 có thể sử dụng trong nhiều bối cảnh hơn so với NAT của IPv4. Sự đa dạng của NAT IPv6 là dùng để cung cấp sự rõ ràng chỉ có IPv4 hoặc chỉ có IPv6. 
+
+![4](/image/2021-04-16_16-54-13.png)
+
