--- a/20. WAN.md
+++ b/20. WAN.md
@@ -1,1 +1,64 @@
 # WAN
+- Tìm hiểu về mô hình WAN, các kiểu kiết nối WAN và VPN. 
+## 1. WAN Topologies
+- Point-to-point: Thường dùng dành riêng cho các kết nối thuê kênh, ví dụ như T1/E1. Các kết nối PPP được sử dụng để kết nối mạng LAN với nhà cung cấp dịch vụ WANS và cung cấp kết nối các chi nhánh LAN với nhau của một công ty hay tổ chức. Đây là giao thức lớp 2. 
+- Hub-and-spoke: Dành cho các kết nối single-homed, point-to-multipoint mà tại đó một interface trên router hub có thể chia sẻ với các điểm trên routers khác thông qua một interface ảo
+- Full-mesh: Mỗi routers kết nối tới từng routers khác. Điều này yêu cầu một lượng lớn về interface ảo.
+- Dual-homed: Xây dựng hệ thống dự phòng cho single-homed, point-to-multipoint bằng cách xây dựng một con hub thứ 2 kết nối tới spoke routers.
+
+![1](/image/2021-04-19_13-53-18.png)
+
+## 2. WAN Connection Options
+
+### 2.1 Dedicated Connection Options
+- Thường được gọi là thuê kênh (Leased Lines)
+
+![2](/imgae/2021-04-19_13-59-49.png)
+- Kết nối thuê kênh thường đắt đỏ hơn dịch vụ chuyển mạch vì tính chuyên dụng.
+### 2.2 Circuit-Switched Connection Options
+- Kết nối chuyển mạch thường được sử dụng là analog dialup và ISDN.
+- Analog được sử dụng trong các mô hình kết nối tốc độ chậm như trao đổi giá cả, mua bán, email, ...
+- ISDN chuyển vòng lặp nội bộ thành kết nối kỹ thuật số TDM
+
+![3](/image/2021-04-19_15-39-12.png)
+- Kênh tốc độ cơ sở BRA (Basic Rate Access): Cung cấp 2 kênh B 64kbps cho thoại và hoặc dữ liệu và kênh D 16kbps được dùng để kiểm soát tín hiệu
+- Kênh tốc độ sơ cấp PRA (Primary Rate Access): Cung cấp 23 kênh B 64kbps và 1 kênh D 64kbps ở Bắc Mỹ,...
+### 2.3 Packet-Switched Connection Options 
+- Đây là sự lựa chọn của các doanh nghiệp hiện nay. Bao gồm 2 kiểu kết nối: Metro Ethernet và MPLS. Công nghệ được áp dụng là X.25 và ATM
+- MetroE sử dụng chuyển mạch IP để chuyển đổi giọng nói, dữ liệu, và dịch vụ video với tốc độ Ethernet. Một số lợi ích như sau:
+    - **Reduced expenses and administration:** Doanh nghiệp có thể kết nối hàng trăm site lại với nhau thành một vùng lớn và kết nối ra ngoài Internet không cần đến các kết nối đắt đỏ như ATM hoặc Frame Relay.
+    - **Easy integration with existing networks:** Dễ kết nối với Ethernet LAN có sẵn
+    - **Enhanced business productivity:** Tận dụng ưu điểm của IP. 
+- MPLS có một số đặc điểm sau: 
+    - **Multiprotocol:** Có thể truyền tải nhiều kiểu lưu lượng; bao gồm IPv4, IPv6, ATM, Ethernet, DSL và Frame Relay
+    - **Labels:** Sử dụng nhãn trong nhà mạng cung cấp dịch vụ để xác định tuyến đường giữa routers 
+    - **Switching:** Định tuyến gói IPv4 và IPv6, các gói còn lại sẽ chuyển mạch. 
+### 2.4 Các kiểu kết nối Internet
+- DSL 
+    - Là một công nghệ kết nối thường trực dùng đường di động xoắn đôi để truyền dữ liệu có băng thông cao và cung cấp dịch vụ IP cho người đăng ký
+- Cable Modem 
+    - Kết nối luôn bật và cài đặt đơn giản là đặc điểm của phương thức này 
+- Wireless
+    - **Municipad Wi-Fi** 
+    - **WiMAX**
+    - **Satellite Internet**
+    - **Cellular service** 
+### 2.5 Lựa chọn kết nối WAN
+| Lựa chọn | Mô tả | Lợi thế | Nhược điểm | Giao thức |
+|:--------:|:-----:|:-------:|:----------:|:---------:|
+| Leased line | Kết nối điểm điểm giữa 2 LAN | An toàn nhất | Đắt | PPP,HDLC,SDLC |
+| Circuit switching | Đường mạch chuyên biệt giữa 2 điểm cuối | Rẻ hơn | Cài đặt để gọi | PPP,ISDN |
+| Packet switching | Thiết bị truyền gói bằng một chia sẻ point-to-point or point-to-multipoint | Hiệu quả cao dùng băng thông | Chia sẻ media qua đường dẫn | Frame Relay, MetroE |
+| Internet | Gói chuyển mạch không kết nối dùng Internet | Rẻ nhất | Không an toàn | DSL,wireless |
+
+## 3. Công nghệ VPN
+- Là mã hóa kết nối giữa mạng cá nhân ra mạng công cộng. Thay vì sử dụng công nghệ thuê kênh tại lớp 2, VPN sử dụng công nghệ kết nối ảo gọi là VPN tunnels
+- Ưu điểm
+    - Tiết kiệm chi phí: Loại bỏ chi phí dành riêng cho kết nối WAN và modem
+    - Bảo mật: Tận dụng ưu điểm của mã hóa và xác thực giao thức bảo vệ dữ liệu từ nguồn không chính thống. 
+    - Khả năng mở rộng: Có thể thêm lượng lớn dung lượng mà không cần thêm cơ sở hạ tầng
+    - Khả năng thích ứng với công nghệ băng thông rộng: Hỗ trợ bởi nhà cung cấp dịch vụ, vì vậy nhân viên di động và viễn thông có thể tận dụng dịch vụ Internet tốc độ cao tại nhà để truy cập mạng công ty
+- Một số loại VPN
+    - **Site-to-site VPNs:** Kết nối tất cả mạng này với tất cả mạng khác
+    - **Remote-access VPNs:** Dùng cho các host riêng lẻ để kết nối từ xa đến mạng của công ty qua Internet
+    - **Dynamic Multipoint VPN:**  Công nghệ của Cisco để xây dựng VPN một cách dễ dàng
